# server/service/tunnel.go
@@ -3,6 +3,8 @@ package service
 import (
 	"bytes"
 	"encoding/json"
+	"errors"
+	"os"
 	"os/exec"
 
 	"github.com/google/uuid"
@@ -19,9 +21,9 @@ const (
 )
 
 type ITunnelSrv interface {
-	Start(uuid uuid.UUID) (*model.Tunnel, error)
-	Restart(uuid uuid.UUID) (*model.Tunnel, error)
-	Stop(uuid uuid.UUID) (*model.Tunnel, error)
+	Start(uuid uuid.UUID) error
+	Stop(uuid uuid.UUID) error
+	Restart(uuid uuid.UUID) error
 
 	AddConn(uuid uuid.UUID, domain string) (*model.Tunnel, error)
 	RemoveConn(uuid uuid.UUID) (*model.Tunnel, error)
@@ -35,22 +37,24 @@ type ITunnelSrv interface {
 func NewTunelSrv() ITunnelSrv {
 	var service ITunnelSrv
 	app.Invoke(func(db *gorm.DB, logger *zap.SugaredLogger) {
-		service = TunelSrv{
-			db:     db,
-			logger: logger,
+		service = &TunnelSrv{
+			db:         db,
+			logger:     logger,
+			tunnelProc: make(map[uuid.UUID]*os.Process),
 		}
 	})
 
 	return service
 }
 
-type TunelSrv struct {
-	db     *gorm.DB
-	logger *zap.SugaredLogger
+type TunnelSrv struct {
+	db         *gorm.DB
+	logger     *zap.SugaredLogger
+	tunnelProc map[uuid.UUID]*os.Process // tunnelPid is a map with [Key] tunnel id and [Value] *os.process
 }
 
 // Info implements ITunnelSrv.
-func (t TunelSrv) Info(uuid uuid.UUID) (*model.Tunnel, error) {
+func (t *TunnelSrv) Info(uuid uuid.UUID) (*model.Tunnel, error) {
 	cmd := exec.Command(_CLOUDFLARED, _TUNNEL, "info", _OUTPUT, uuid.String())
 	data, err := cmd.Output()
 	if err != nil {
@@ -71,7 +75,7 @@ func (t TunelSrv) Info(uuid uuid.UUID) (*model.Tunnel, error) {
 
 // AddConn implements ITunnelSrv.
 // runs and parses ❯ cloudflared tunnel route dns [uuid] [domain]
-func (t TunelSrv) AddConn(uuid uuid.UUID, domain string) (*model.Tunnel, error) {
+func (t *TunnelSrv) AddConn(uuid uuid.UUID, domain string) (*model.Tunnel, error) {
 	cmd := exec.Command(_CLOUDFLARED, _TUNNEL, "route", "dns", uuid.String(), domain)
 
 	err := cmd.Run()
@@ -91,29 +95,64 @@ func (t TunelSrv) AddConn(uuid uuid.UUID, domain string) (*model.Tunnel, error) 
 }
 
 // RemoveConn implements ITunnelSrv.
-func (t TunelSrv) RemoveConn(uuid uuid.UUID) (*model.Tunnel, error) {
+func (t *TunnelSrv) RemoveConn(uuid uuid.UUID) (*model.Tunnel, error) {
 	// TODO: see with cloudflared api
 	panic("unimplemented")
 }
 
 // Restart implements ITunnelSrv.
-func (t TunelSrv) Restart(uuid uuid.UUID) (*model.Tunnel, error) {
+func (t *TunnelSrv) Restart(uuid uuid.UUID) error {
 	panic("unimplemented")
 }
 
 // Start implements ITunnelSrv.
-func (t TunelSrv) Start(uuid uuid.UUID) (*model.Tunnel, error) {
-	panic("unimplemented")
+// runs and parses ❯ cloudflared tunnel run [tunnel id]
+func (t *TunnelSrv) Start(uuid uuid.UUID) error {
+	_, ok := t.tunnelProc[uuid]
+	if ok {
+		zap.S().Infof("Tunnel uuid = %s already running", uuid)
+		return errors.New("tunnel already running")
+	}
+
+	cmd := exec.Command(_CLOUDFLARED, _TUNNEL, _OUTPUT, "run", uuid.String())
+	err := cmd.Start()
+	if err != nil {
+		checkErr(err)
+		t.logger.Errorf("Error running the command = %s, err = %w", cmd.String(), err)
+		return err
+	}
+	t.tunnelProc[uuid] = cmd.Process
+
+	return nil
 }
 
 // Stop implements ITunnelSrv.
-func (t TunelSrv) Stop(uuid uuid.UUID) (*model.Tunnel, error) {
-	panic("unimplemented")
+func (t *TunnelSrv) Stop(uuid uuid.UUID) error {
+	proc, ok := t.tunnelProc[uuid]
+	if !ok {
+		t.logger.Errorf("Procces running a tunnel %s not found", uuid.String())
+		return errors.New("Procces not found")
+	}
+
+	err := proc.Kill()
+	if err != nil {
+		t.logger.Errorf("Failed to kill procces = %+v, err = %v", *proc, err)
+		return err
+	}
+
+	_, err = proc.Wait()
+	if err != nil {
+		t.logger.Errorf("Failed to Wait for procces = %+v, err = %v", *proc, err)
+		return err
+	}
+
+	delete(t.tunnelProc, uuid)
+	return nil
 }
 
 // Create implements ITunnelSrv.
 // runs and parses ❯ cloudflared tunnel create [name]
-func (t TunelSrv) Create(name string) (*model.Tunnel, error) {
+func (t *TunnelSrv) Create(name string) (*model.Tunnel, error) {
 	cmd := exec.Command(_CLOUDFLARED, _TUNNEL, "create", _OUTPUT, name)
 	data, err := cmd.Output()
 	if err != nil {
@@ -133,7 +172,7 @@ func (t TunelSrv) Create(name string) (*model.Tunnel, error) {
 }
 
 // Delete implements ITunnelSrv.
-func (t TunelSrv) Delete(uuid uuid.UUID) error {
+func (t *TunnelSrv) Delete(uuid uuid.UUID) error {
 	cmd := exec.Command(_CLOUDFLARED, _TUNNEL, "delete", _OUTPUT, uuid.String())
 	err := cmd.Run()
 	if err != nil {
@@ -147,7 +186,7 @@ func (t TunelSrv) Delete(uuid uuid.UUID) error {
 
 // List implements ITunnelSrv.
 // runs and parses ❯ cloudflared tunnel list
-func (t TunelSrv) List() ([]model.Tunnel, error) {
+func (t *TunnelSrv) List() ([]model.Tunnel, error) {
 	cmd := exec.Command(_CLOUDFLARED, _TUNNEL, "list", _OUTPUT)
 	data, err := cmd.Output()
 	if err != nil {
